# C_plus_plus_CodeBeauty_course

./: CMakeLists.txt  main  main.cpp  wordEncryptorASCII  wordEncryptorASCII.cpp
Functions/: CheckPrimeNumber  CheckPrimeNumber.cpp  FunctionsOverFlowViaSmmation  FunctionsOverFlowViaSmmation.cpp  GenericFunctionsExampleSwap  GenericFunctionsExampleSwap.cpp  RecursionExampleForSum  RecursionExampleForSum.cpp  function1  function1.cpp
Functions/RecursionExampleForSum.dSYM/Contents/: Info.plist
Functions/RecursionExampleForSum.dSYM/Contents/Resources/DWARF/: RecursionExampleForSum
Functions/RecursionExampleForSum.dSYM/Contents/Resources/Relocations/aarch64/: RecursionExampleForSum.yml
OOP /: OOP1YoutubeChannel  OOP1YoutubeChannel.cpp  OOP2
Operators/: Operators1  Operators1.cpp  swapping2Variables  swapping2Variables.cpp
Pointers/: ArraysAndPointers  ArraysAndPointers.cpp  DynamicArrayPractice  DynamicArrayPractice.cpp  MemoryLeakExample  MemoryLeakExample.cpp  MultidimensionalArrays  MultidimensionalArrays.cpp  Pointers1  Pointers1.cpp  ReturnViaPointersFromFunction  ReturnViaPointersFromFunction.cpp
Side_Projects/: ATMapp  ATMapp.cpp  BMICalculator  BMICalculator.cpp  Calculator  Calculator.cpp  CheckAverageGrade  CheckAverageGrade.cpp  CountDigitsInNumber  CountDigitsInNumber.cpp  DaysInMonth  DaysInMonth.cpp  DrawRectangleStars  DrawRectangleStars.cpp  DrawTriangle  DrawTriangle.cpp  Factorial  Factorial.cpp  Guess_game  Guess_game.cpp  MultiplicationTable  MultiplicationTable.cpp  OOP2WorkingForEncapsulation  OOP2WorkingForEncapsulation.cpp  OOPYoutubeChannel  OOPYoutubeChannel.cpp  PinCheckingAttempts  PinCheckingAttempts.cpp  ReverseOrderOfNumber  ReverseOrderOfNumber.cpp  showAllNumbersdivby3and5  showAllNumbersdivby3and5.cpp
Side_Projects/CountDigitsInNumber.dSYM/Contents/: Info.plist
Side_Projects/CountDigitsInNumber.dSYM/Contents/Resources/DWARF/: CountDigitsInNumber
Side_Projects/CountDigitsInNumber.dSYM/Contents/Resources/Relocations/aarch64/: CountDigitsInNumber.yml
Side_Projects/ReverseOrderOfNumber.dSYM/Contents/: Info.plist
Side_Projects/ReverseOrderOfNumber.dSYM/Contents/Resources/DWARF/: ReverseOrderOfNumber
Side_Projects/ReverseOrderOfNumber.dSYM/Contents/Resources/Relocations/aarch64/: ReverseOrderOfNumber.yml
if_else_statements/: if_else_stat1  if_else_stat1.cpp  if_else_stat2  if_else_stat2.cpp
